[gd_scene load_steps=18 format=2]

[ext_resource path="res://Font/Giants-Inline.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Network_setup.gd" type="Script" id=2]
[ext_resource path="res://Tiles/frame.png" type="Texture" id=3]
[ext_resource path="res://Icons/Level 4_Icon.png" type="Texture" id=4]
[ext_resource path="res://Icons/Level 5_Icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 4, 4 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 4, 4 )

[sub_resource type="DynamicFont" id=11]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="TileSet" id=12]
0/name = "frame.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=20]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.364706, 0.443137, 0.447059, 1 )
border_width_top = 20
border_color = Color( 0.482353, 0.592157, 0.592157, 1 )
expand_margin_top = 20.0

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0.0941176, 0.156863, 1 )

[sub_resource type="StyleBoxFlat" id=27]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.258824, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0.0941176, 0.156863, 1 )

[sub_resource type="DynamicFont" id=28]
size = 111
font_data = ExtResource( 1 )

[node name="Network_setup" type="Node2D"]
script = ExtResource( 2 )

[node name="Mulitplayer_configure" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.65098, 0.788235, 0.796078, 0.686275 )

[node name="Create_server" type="Button" parent="Mulitplayer_configure"]
margin_left = 768.0
margin_top = 507.0
margin_right = 988.0
margin_bottom = 577.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "방 만들기"
__meta__ = {
"_editor_description_": ""
}

[node name="Join_server" type="Button" parent="Mulitplayer_configure"]
margin_left = 500.0
margin_top = 507.0
margin_right = 720.0
margin_bottom = 577.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "방 찾기"
__meta__ = {
"_editor_description_": ""
}

[node name="Back_button" type="Button" parent="Mulitplayer_configure"]
margin_left = 30.0
margin_top = 507.0
margin_right = 250.0
margin_bottom = 577.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "뒤로"
__meta__ = {
"_editor_description_": ""
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Device_ip_address" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 11 )
align = 1
valign = 1

[node name="Loby" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.65098, 0.788235, 0.796078, 0.686275 )

[node name="Frame" type="TileMap" parent="Loby"]
tile_set = SubResource( 12 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393252, 0, 0, 393253, 0, 0, 393254, 0, 0, 393255, 0, 0, 393256, 0, 0, 393257, 0, 0, 393258, 0, 0, 393259, 0, 0, 393260, 0, 0, 393261, 0, 0, 393262, 0, 0, 393263, 0, 0, 393264, 0, 0, 393265, 0, 0, 393266, 0, 0, 393267, 0, 0, 393268, 0, 0, 393269, 0, 0, 393270, 0, 0, 393271, 0, 0, 393272, 0, 0, 393273, 0, 0, 393274, 0, 0, 393275, 0, 0, 393276, 0, 0, 458755, 0, 0, 458774, 0, 0, 458793, 0, 0, 458812, 0, 0, 524291, 0, 0, 524310, 0, 0, 524329, 0, 0, 524348, 0, 0, 589827, 0, 0, 589846, 0, 0, 589865, 0, 0, 589884, 0, 0, 655363, 0, 0, 655382, 0, 0, 655401, 0, 0, 655420, 0, 0, 720899, 0, 0, 720918, 0, 0, 720937, 0, 0, 720956, 0, 0, 786435, 0, 0, 786454, 0, 0, 786473, 0, 0, 786492, 0, 0, 851971, 0, 0, 851990, 0, 0, 852009, 0, 0, 852028, 0, 0, 917507, 0, 0, 917526, 0, 0, 917545, 0, 0, 917564, 0, 0, 983043, 0, 0, 983062, 0, 0, 983081, 0, 0, 983100, 0, 0, 1048579, 0, 0, 1048598, 0, 0, 1048617, 0, 0, 1048636, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114148, 0, 0, 1114149, 0, 0, 1114150, 0, 0, 1114151, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1114154, 0, 0, 1114155, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114158, 0, 0, 1114159, 0, 0, 1114160, 0, 0, 1114161, 0, 0, 1114162, 0, 0, 1114163, 0, 0, 1114164, 0, 0, 1114165, 0, 0, 1114166, 0, 0, 1114167, 0, 0, 1114168, 0, 0, 1114169, 0, 0, 1114170, 0, 0, 1114171, 0, 0, 1114172, 0, 0, 1179651, 0, 0, 1179670, 0, 0, 1179689, 0, 0, 1179708, 0, 0, 1245187, 0, 0, 1245206, 0, 0, 1245225, 0, 0, 1245244, 0, 0, 1310723, 0, 0, 1310742, 0, 0, 1310761, 0, 0, 1310780, 0, 0, 1376259, 0, 0, 1376278, 0, 0, 1376297, 0, 0, 1376316, 0, 0, 1441795, 0, 0, 1441814, 0, 0, 1441833, 0, 0, 1441852, 0, 0, 1507331, 0, 0, 1507350, 0, 0, 1507369, 0, 0, 1507388, 0, 0, 1572867, 0, 0, 1572886, 0, 0, 1572905, 0, 0, 1572924, 0, 0, 1638403, 0, 0, 1638422, 0, 0, 1638441, 0, 0, 1638460, 0, 0, 1703939, 0, 0, 1703958, 0, 0, 1703977, 0, 0, 1703996, 0, 0, 1769475, 0, 0, 1769494, 0, 0, 1769513, 0, 0, 1769532, 0, 0, 1835011, 0, 0, 1835012, 0, 0, 1835013, 0, 0, 1835014, 0, 0, 1835015, 0, 0, 1835016, 0, 0, 1835017, 0, 0, 1835018, 0, 0, 1835019, 0, 0, 1835020, 0, 0, 1835021, 0, 0, 1835022, 0, 0, 1835023, 0, 0, 1835024, 0, 0, 1835025, 0, 0, 1835026, 0, 0, 1835027, 0, 0, 1835028, 0, 0, 1835029, 0, 0, 1835030, 0, 0, 1835031, 0, 0, 1835032, 0, 0, 1835033, 0, 0, 1835034, 0, 0, 1835035, 0, 0, 1835036, 0, 0, 1835037, 0, 0, 1835038, 0, 0, 1835039, 0, 0, 1835040, 0, 0, 1835041, 0, 0, 1835042, 0, 0, 1835043, 0, 0, 1835044, 0, 0, 1835045, 0, 0, 1835046, 0, 0, 1835047, 0, 0, 1835048, 0, 0, 1835049, 0, 0, 1835050, 0, 0, 1835051, 0, 0, 1835052, 0, 0, 1835053, 0, 0, 1835054, 0, 0, 1835055, 0, 0, 1835056, 0, 0, 1835057, 0, 0, 1835058, 0, 0, 1835059, 0, 0, 1835060, 0, 0, 1835061, 0, 0, 1835062, 0, 0, 1835063, 0, 0, 1835064, 0, 0, 1835065, 0, 0, 1835066, 0, 0, 1835067, 0, 0, 1835068, 0, 0 )

[node name="Start_game" type="Button" parent="Loby"]
margin_left = 765.0
margin_top = 515.0
margin_right = 1007.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "게임 시작"
__meta__ = {
"_editor_description_": ""
}

[node name="Left_game" type="Button" parent="Loby"]
margin_left = 11.0
margin_top = 515.0
margin_right = 253.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "나가기"
__meta__ = {
"_editor_description_": ""
}

[node name="Left_game2" type="Button" parent="Loby"]
margin_left = 11.0
margin_top = 515.0
margin_right = 253.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "나가기"
__meta__ = {
"_editor_description_": ""
}

[node name="Map_button" type="Button" parent="Loby"]
margin_left = 553.0
margin_top = 515.0
margin_right = 724.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "맵"
__meta__ = {
"_editor_description_": ""
}

[node name="Node2D" type="Node2D" parent="Loby"]
z_index = 100

[node name="WindowDialog" type="WindowDialog" parent="Loby/Node2D"]
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/title_font = SubResource( 20 )
custom_styles/panel = SubResource( 26 )
window_title = "맵"
__meta__ = {
"_editor_description_": ""
}

[node name="Level 4" type="Button" parent="Loby/Node2D/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -443.0
margin_top = -263.0
margin_right = 603.0
margin_bottom = 357.0
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 4 )
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Loby/Node2D/WindowDialog/Level 4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -218.0
margin_top = 20.0
margin_right = 201.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 28 )
text = "Level 4"
align = 1
valign = 1

[node name="Level 5" type="Button" parent="Loby/Node2D/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -263.0
margin_right = 944.0
margin_bottom = 377.0
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 5 )
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Loby/Node2D/WindowDialog/Level 5"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -218.0
margin_top = 20.0
margin_right = 201.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 28 )
text = "Level 5"
align = 1
valign = 1

[node name="none" type="Button" parent="Loby/Node2D/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 230.0
margin_top = -263.0
margin_right = 1276.0
margin_bottom = 377.0
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 3 )
disabled = true
icon = ExtResource( 5 )
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Loby/Node2D/WindowDialog/none"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -218.0
margin_top = 20.0
margin_right = 201.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 28 )
text = "none"
align = 1
valign = 1

[node name="none2" type="Button" parent="Loby/Node2D/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -77.0
margin_right = 944.0
margin_bottom = 563.0
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 3 )
disabled = true
icon = ExtResource( 5 )
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Loby/Node2D/WindowDialog/none2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -218.0
margin_top = 20.0
margin_right = 201.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 28 )
text = "none"
align = 1
valign = 1

[node name="none3" type="Button" parent="Loby/Node2D/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 230.0
margin_top = -77.0
margin_right = 1276.0
margin_bottom = 563.0
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 3 )
disabled = true
icon = ExtResource( 5 )
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Loby/Node2D/WindowDialog/none3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -218.0
margin_top = 20.0
margin_right = 201.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 28 )
text = "none"
align = 1
valign = 1

[node name="none4" type="Button" parent="Loby/Node2D/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -443.0
margin_top = 107.0
margin_right = 603.0
margin_bottom = 747.0
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 3 )
disabled = true
icon = ExtResource( 5 )
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Loby/Node2D/WindowDialog/none4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -218.0
margin_top = 20.0
margin_right = 201.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 28 )
text = "none"
align = 1
valign = 1

[node name="none5" type="Button" parent="Loby/Node2D/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = 107.0
margin_right = 944.0
margin_bottom = 747.0
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 3 )
disabled = true
icon = ExtResource( 5 )
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Loby/Node2D/WindowDialog/none5"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -218.0
margin_top = 20.0
margin_right = 201.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 28 )
text = "none"
align = 1
valign = 1

[node name="none6" type="Button" parent="Loby/Node2D/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 230.0
margin_top = 107.0
margin_right = 1276.0
margin_bottom = 747.0
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 3 )
disabled = true
icon = ExtResource( 5 )
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Loby/Node2D/WindowDialog/none6"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -218.0
margin_top = 20.0
margin_right = 201.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 28 )
text = "none"
align = 1
valign = 1

[node name="PlayGround" type="Button" parent="Loby/Node2D/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -443.0
margin_top = -77.0
margin_right = 603.0
margin_bottom = 543.0
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 4 )
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Loby/Node2D/WindowDialog/PlayGround"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -328.0
margin_top = 65.0
margin_right = 349.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 28 )
text = "PlayGround"
align = 1
valign = 1

[connection signal="pressed" from="Mulitplayer_configure/Create_server" to="." method="_on_Create_server_pressed"]
[connection signal="pressed" from="Mulitplayer_configure/Join_server" to="." method="_on_Join_server_pressed"]
[connection signal="pressed" from="Mulitplayer_configure/Back_button" to="." method="_on_Back_button_pressed"]
[connection signal="pressed" from="Loby/Start_game" to="." method="_on_Start_game_pressed"]
[connection signal="pressed" from="Loby/Left_game" to="." method="_on_Left_game_pressed"]
[connection signal="pressed" from="Loby/Left_game2" to="." method="_on_Left_game2_pressed"]
[connection signal="pressed" from="Loby/Map_button" to="." method="_on_Map_button_pressed"]
[connection signal="hide" from="Loby/Node2D/WindowDialog" to="." method="_on_WindowDialog_hide"]
[connection signal="pressed" from="Loby/Node2D/WindowDialog/Level 4" to="." method="_on_Level_4_pressed"]
[connection signal="pressed" from="Loby/Node2D/WindowDialog/Level 5" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="Loby/Node2D/WindowDialog/none" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="Loby/Node2D/WindowDialog/none2" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="Loby/Node2D/WindowDialog/none3" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="Loby/Node2D/WindowDialog/none4" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="Loby/Node2D/WindowDialog/none5" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="Loby/Node2D/WindowDialog/none6" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="Loby/Node2D/WindowDialog/PlayGround" to="." method="_on_PlayGround_pressed"]
